fix: light theme contrast

--- a/apps/site/src/routes/global.scss
+++ b/apps/site/src/routes/global.scss
@@ -1,4 +1,7 @@
 @use '$lib/common/styles/styles' as styles;
+@use '$lib/colors/light.scss' as light;
+@use '$lib/colors/dark.scss' as dark;
+@use '$lib/colors/variables.scss' as colors;
 
 @import '@radix-ui/colors/gray.css';
 @import '@radix-ui/colors/grayA.css';
@@ -13,34 +16,43 @@ html {
 	scroll-behavior: smooth;
 }
 
-body {
-	margin: 0;
-	overflow-x: hidden;
-	font-family: 'blinker', sans-serif;
-
-	@media (prefers-color-scheme: dark) {
-		background-color: var(--gray1);
-		color: var(--gray12);
-	}
-}
-
 :root {
 	--padding-x: 16px;
 	@media (min-width: styles.$breakpoint-1) {
 		--padding-x: 32px;
 	}
 
-	--cyber-blue-1: #cfe5fc;
-	--cyber-blue-2: #b1d7fa;
-	--cyber-blue-3: #4aa9f2;
-	--cyber-blue-4: #2d5d8e;
-	--cyber-blue-5: #131c29;
+	@include light.light;
+	@media (prefers-contrast: more) {
+		@include light.light-high-contrast;
+	}
+
+	.force-light-theme {
+		@include light.light;
+		@media (prefers-contrast: more) {
+			@include light.light-high-contrast;
+		}
+	}
 
 	@media (prefers-color-scheme: dark) {
-		--cyber-blue-1: #051c35;
-		--cyber-blue-2: #0a2849;
-		--cyber-blue-3: #205180;
-		--cyber-blue-4: #4f9adb;
-		--cyber-blue-5: #dae3f1;
+		@include dark.dark;
+		@media (prefers-contrast: more) {
+			@include dark.dark-high-contrast;
+		}
 	}
+
+	.force-dark-theme {
+		@include dark.dark;
+		@media (prefers-contrast: more) {
+			@include dark.dark-high-contrast;
+		}
+	}
+}
+
+body {
+	margin: 0;
+	overflow-x: hidden;
+	font-family: 'blinker', sans-serif;
+	background-color: colors.$md-sys-color-background;
+	color: colors.$md-sys-color-on-background;
 }
